--- a/envTest.ipynb
+++ b/envTest.ipynb
@@ -12,20 +12,214 @@
     "from environnement.tools import *\n",
     "from environnement.Robot import Robot\n",
     "from outil import *\n",
+    "from model.OneHot import OneHot\n",
+    "\n",
+    "from model.TokenDrop import TokenDropOddWithOH\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "['<pad>']\n",
+      "___________________________\n",
+      "[0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "['forward']\n",
+      "___________________________\n",
+      "[0, 0, 1, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 1, 0, 0, 0, 0, 0, 0]\n",
+      "['feel_front']\n",
+      "___________________________\n",
+      "[0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
+      "['feel_left']\n",
+      "___________________________\n",
+      "[0, 0, 0, 0, 1, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 0, 0, 0, 0]\n",
+      "['feel_right']\n",
+      "___________________________\n",
+      "[0, 0, 0, 0, 0, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 0, 0, 0]\n",
+      "['turn_left']\n",
+      "___________________________\n",
+      "[0, 0, 0, 0, 0, 0, 1, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 1, 0, 0]\n",
+      "['turn_right']\n",
+      "___________________________\n",
+      "[0, 0, 0, 0, 0, 0, 0, 1, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 1, 0]\n",
+      "['empty']\n",
+      "___________________________\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 1]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 1]\n",
+      "['wall']\n",
+      "___________________________\n",
+      "[0, 0, 0, 0, 0, 0, 0, 1, 0]\n",
+      "['turn_left', 'empty', 'turn_left', 'empty', 'turn_left', 'empty', 'feel_front', 'wall', 'feel_right', 'empty', 'turn_right', 'empty', 'feel_left', 'wall', 'forward', 'empty', 'turn_left', 'empty', 'turn_left', 'empty', 'feel_left', 'wall', 'feel_front', 'empty', 'feel_front', 'empty', 'forward', 'empty', 'turn_left', 'empty', 'feel_left', 'empty', 'turn_left', 'empty', 'turn_left', 'empty', 'feel_right', 'empty', 'feel_front', '<pad>']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_vocab = ['<pad>', 'forward', 'feel_front','feel_left', 'feel_right', 'turn_left', 'turn_right', 'empty', 'wall']\n",
+    "tmp = create_dico_numerate_word(list_vocab)\n",
+    "test = OneHot(tmp)\n",
+    "\n",
+    "for i in range(len(list_vocab)):\n",
+    "    print(test.encode(list_vocab[i]))\n",
+    "    one_hot_encode = test.encode(list_vocab[i])\n",
+    "    print(one_hot_encode)\n",
+    "    print(test.decode(one_hot_encode))\n",
+    "    print(\"___________________________\")\n",
+    "    \n",
+    "print(test.encode('empty'))\n",
+    "seq = \\\n",
+    "['turn_left', 'empty', 'turn_left', 'empty', 'turn_left', 'empty', 'feel_front', 'wall', 'feel_right', 'empty', 'turn_right', 'empty', 'feel_left', 'wall', 'forward', 'empty', 'turn_left', 'empty', 'turn_left', 'empty', 'feel_left', 'wall', 'feel_front', 'empty', 'feel_front', 'empty', 'forward', 'empty', 'turn_left', 'empty', 'feel_left', 'empty', 'turn_left', 'empty', 'turn_left', 'empty', 'feel_right', 'empty', 'feel_front', '<pad>']\n",
+    "tmp = test.encode(seq)\n",
+    "print(test.decode(tmp))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stack :\n",
+      "tensor([[0, 1],\n",
+      "        [2, 3],\n",
+      "        [4, 5]]) torch.Size([3, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.tensor([0, 2, 4])\n",
+    "y = torch.tensor([1, 3, 5])\n",
+    "\n",
+    "# Redimensionner et concaténer en une seule étape\n",
+    "stacked = torch.cat((x.unsqueeze(1), y.unsqueeze(1)), dim=1)\n",
+    "\n",
+    "print(\"stack :\")\n",
+    "print(stacked, stacked.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[0, 0, 0, 0, 0, 1, 0, 0, 0],\n",
+      "         [0, 0, 0, 0, 0, 0, 0, 0, 1],\n",
+      "         [0, 0, 1, 0, 0, 0, 0, 0, 0],\n",
+      "         [0, 0, 0, 0, 0, 0, 0, 1, 0],\n",
+      "         [0, 0, 0, 0, 0, 1, 0, 0, 0],\n",
+      "         [0, 0, 0, 0, 0, 0, 0, 1, 0]]])\n",
+      "tensor([[0, 1],\n",
+      "        [0, 1],\n",
+      "        [0, 1]])\n",
+      "tensor([0, 1, 0, 1, 0, 1])\n",
+      "tensor([[[ 0,  0,  0,  0,  0,  1,  0,  0,  0],\n",
+      "         [-1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
+      "         [ 0,  0,  1,  0,  0,  0,  0,  0,  0],\n",
+      "         [-1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
+      "         [ 0,  0,  0,  0,  0,  1,  0,  0,  0],\n",
+      "         [-1, -1, -1, -1, -1, -1, -1, -1, -1]]]) torch.Size([1, 6, 9])\n"
+     ]
+    }
+   ],
+   "source": [
+    "td = TokenDropOddWithOH(test, 0.9)\n",
+    "seq = ['turn_left', 'wall', 'feel_front', 'empty', 'turn_left', 'empty']\n",
+    "\n",
+    "tensor_test = torch.tensor(test.encode(seq))\n",
+    "tensor_test = tensor_test.unsqueeze(0)\n",
+    "\n",
+    "print(torch.unflatten(tensor_test, 1, (6, 9)))\n",
+    "res = td(tensor_test)\n",
+    "# pass 1, 54 to 1, 6, 9\n",
+    "res = torch.unflatten(res, 1, (6, 9))\n",
+    "print(res, res.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "         0, 0, 0, 0, 0, 0]])\n",
+      "tensor([[0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000,\n",
+      "         0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000,\n",
+      "         0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000,\n",
+      "         0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000,\n",
+      "         0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000,\n",
+      "         0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.2000]])\n",
+      "tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "         0, 0, 0, 0, 0, 0]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(torch.zeros_like(tensor_test))\n",
+    "print(0.2 * torch.ones_like(tensor_test))\n",
+    "\n",
+    "print(torch.bernoulli(0.1 * torch.ones_like(tensor_test)).long())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "seq =\\\n",
-    "['forward', 'empty', 'feel_right', 'empty', 'turn_left', 'empty', 'feel_front', 'empty', 'feel_front', 'empty', 'forward', 'empty', 'feel_left', 'empty', 'feel_front', 'wall', 'feel_left', 'empty', 'feel_left', 'empty', 'feel_left', 'empty', 'feel_front', 'wall', 'forward', 'wall', 'turn_right', 'empty', 'turn_right', '<pad>']"
+    "['turn_left', 'empty', 'turn_left', 'empty', 'turn_left', 'empty', 'feel_front', 'wall', 'feel_right', 'empty', 'turn_right', 'empty', 'feel_left', 'wall', 'forward', 'empty', 'turn_left', 'empty', 'turn_left', 'empty', 'feel_left', 'wall', 'feel_front', 'empty', 'feel_front', 'empty', 'forward', 'empty', 'turn_left', 'empty', 'feel_left', 'empty', 'turn_left', 'empty', 'turn_left', 'empty', 'feel_right', 'empty', 'feel_front', '<pad>']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(seq)"
    ]
   },
   {
@@ -44,10 +238,96 @@
     }
    ],
    "source": [
-    "list_array = process_sequence(seq, 6, \"imgToGif\")\n",
+    "list_array, x, y, theta = process_sequence(seq, 6, \"imgToGif\")\n",
     "print('in memory : ', info_in_memory(list_array))\n",
     "print(info_in_seq(seq, 6))\n",
     "print(info_step_in_memory(list_array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_array, x, y, theta = process_sequence_inter(seq, 6, \"imgToGif\")\n",
+    "print('in memory : ', info_in_memory(list_array))\n",
+    "print(info_in_seq(seq, 6))\n",
+    "print(info_step_in_memory(list_array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, True, True]\n",
+      "[False, True, True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(feel_info_end_sequence(seq, 6))\n",
+    "\n",
+    "print(feel_info_end_sequence(seq, 6, (list_array, x, y, theta)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, True, True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# def feel_info_end_sequence(seq: list, size: int):\n",
+    "#     \"\"\"\n",
+    "#     This function analyzes a sequence of interactions and determines for each feeling if\n",
+    "#     sequence have information.\n",
+    "\n",
+    "#     Parameters:\n",
+    "#     seq (list): A list of interaction in this format ['action', 'feedback', ...].\n",
+    "#     size (int): This size must correspond to twice the maximum length of the environment.\n",
+    "\n",
+    "#     Returns:\n",
+    "#     list: A list of boolean values indicating whether each \"feeling\" action at the end \n",
+    "#           of the sequence provides information (True) or not (False).\n",
+    "#     \"\"\"\n",
+    "#     last_step_info = -2 if seq[-1] == '<pad>' else -1\n",
+    "#     list_array, x, y, theta = process_sequence(seq, size, \"imgToGif\")\n",
+    "#     # print('x, y, theta : ', x, y, theta)\n",
+    "#     directions_x = [\n",
+    "#         -1,\n",
+    "#         0,\n",
+    "#         1,\n",
+    "#         0,\n",
+    "#     ]\n",
+    "#     directions_y = [\n",
+    "#         0,\n",
+    "#         1,\n",
+    "#         0,\n",
+    "#         -1,\n",
+    "#     ]\n",
+    "\n",
+    "#     feel_bool = []\n",
+    "#     for i in range(-1, 2):\n",
+    "#         theta_feel = (theta + i) % 4\n",
+    "#         x_feel = x + directions_x[theta_feel]\n",
+    "#         y_feel = y + directions_y[theta_feel]\n",
+    "#         feel_bool.append(bool(list_array[last_step_info] [x_feel, y_feel] != 1))\n",
+    "#     return feel_bool\n",
+    "# print(feel_info_end_sequence(seq, 6))\n",
+    "\n"
    ]
   },
   {
